--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span><i>October 2021 to October 2024</i></span><br><b>Bachelor of Arts in Communication Research</b><br>Polytechnic University of the Philippines, Manila Campus<br><i>Candidate for Magna Cum Laude</i>
+                        <li><span><i>October 2021 to October 2024</i></span><br><b>Bachelor of Arts in Communication Research</b><br>Polytechnic University of the Philippines, Manila Campus<br><i>Magna Cum Laude | GWA:1.18</i>
                             <br><a href="https://drive.google.com/file/d/1fsAfZFSLJA3OLUncRym4PA9reKY-fPe7/view?usp=sharing" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></li>
                         <li><span><i>June 2019 to March 2020</i></span><br><b>Senior High School | Humanities and Social Sciences</b><br>New Era University, Quezon City<br><i>With High Honors in Grade 11</i>
                             <br><a href="https://drive.google.com/file/d/1CqrDb6apLP32voTFkHap1Sqjl0OI85YV/view?usp=sharing" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></li>
@@ -577,8 +577,8 @@
         <h2 class="section-title">Awards and Honors</h2>
         <div class="awards-list">
             <div class="award-item">
-                <h3>Candidate for Magna Cum Laude</h3>
-                <p>Consistently recognized for academic excellence as a President's Lister, graduating with a degree in Communication Research from the Polytechnic University of the Philippines.</p>
+                <h3>Magna Cum Laude</h3>
+                <p>Consistently recognized for academic excellence as a President's Lister with a GWA of 1.18, graduating with a degree in Communication Research from the Polytechnic University of the Philippines.</p>
                 <br><a href="https://drive.google.com/file/d/1kUteH0jlyF7msDhpCO3OJM4DU_xNLgwj/view?usp=sharing" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
             </div>
             <div class="award-item">
